flask-demo-app/ingress/flask-todo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: todo
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  selector:
    matchLabels:
      app: todo
  strategy:
    type: Recreate
  replicas: 2
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - image: michaeldommet/flask-app:v3
          name: todo
          ports:
            - containerPort: 5000
              name: todo
