flask-demo-app/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-demo-app
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
spec:
  defaultBackend:
    service:
      name: todo-web # Name of the Service targeted by the Ingress
      port:
        number: 80 # Should match the port used by the Service
